<resources>
    <string name="app_name">Belya</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="password">Password</string>
    <string name="repassword">Confirm Password</string>
    <string name="haveAccount">Already have an account?<b> Login</b></string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="don_t_have_an_account_create_an_account">Don\'t have an account?<b> Create an account</b></string>
    <string name="email">Email</string>
    <string name="why_do_you_use_this_program">Why do you use this program?</string>
    <string name="customer">Customer</string>
    <string name="technician">Technician</string>
    <string name="continuee">continue</string>
    <string name="job">Job</string>
    <string name="work_experience">Work Experience</string>
    <string name="save_changes">Save Changes</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="provide_your_account_s_email_for_which_you_want_to_reset_your_password">Provide your account\'s email for which you want to reset your password!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="back">Back</string>
    <string name="reset_password">Reset Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="location">Location</string>
    <string name="city">City</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="send_message">send message</string>
    <string name="accepted_from_tech_1">Accepted From <b>Tech 1</b></string>
    <string name="notification">Notification</string>
    <string name="chat">Chat</string>
    <string name="my_account">My Account</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="email_job"><![CDATA[Email & Job & City]]></string>
    <string name="email_city_number"><![CDATA[Email & City & Number]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_password">New Password</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="old_password">Old Password</string>
    <string name="update">update</string>
</resources>