<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="96dp"
        android:text="@string/welcome_back"
        android:textColor="@color/blue_main"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:text="@string/email"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email">

        <EditText
            android:id="@+id/phonenumber_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/custome_border_to_edit_text" />
        />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:padding="10dp"
        android:text="@string/password"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="6dp"
        app:boxCornerRadiusBottomStart="6dp"
        app:boxCornerRadiusTopEnd="6dp"
        app:boxCornerRadiusTopStart="6dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/custome_border_to_edit_text"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/Remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:text="@string/remember_me"
        android:textColor="@color/blue_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="@color/blue_main"
        android:text="@string/login"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Remember_me" />

    <TextView
        android:id="@+id/forget_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="106dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/blue_main"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="52dp"
        android:text="@string/don_t_have_an_account_create_an_account"
        android:textColor="@color/blue_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>