<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.registration.whouse.WhoUseThisActivity">

    <ImageView
        android:id="@+id/ic_image"
        android:layout_width="260.55dp"
        android:layout_height="209.21dp"
        android:layout_gravity="center"
        android:layout_marginTop="58dp"
        android:src="@drawable/ic_whouse" />

    <TextView
        android:id="@+id/Why_do_you_use_this_program"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/why_do_you_use_this_program"
        android:textColor="@color/blue_main"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/type_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Why_do_you_use_this_program">

        <RadioButton
            android:id="@+id/customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/customer"
            android:textColor="@color/blue_main"
            android:textSize="24sp"
            android:textStyle="bold" />


        <RadioButton
            android:id="@+id/factor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/factor"
            android:textColor="@color/blue_main"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continuee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39.5dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/continuee"
        android:textSize="16sp"
        app:cornerRadius="40dp" />
</LinearLayout>