<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".ui.auth.signup.SignUpActivity">

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="65dp"
        android:padding="3dp"
        android:text="@string/create_account"
        android:textColor="@color/blue_main"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:text="@string/first_name"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/helepr_v1"
        app:layout_constraintTop_toBottomOf="@id/create_account" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/first_name">

        <EditText
            android:id="@+id/firstname_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/custome_border_to_edit_text"
            tools:text="hi" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:text="@string/lastname"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/helepr_v1"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_firstname" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lastname">

        <EditText
            android:id="@+id/lastname_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/custome_border_to_edit_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:text="@string/email"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/helepr_v1"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_lastname" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email">

        <EditText
            android:id="@+id/phonenumber_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/custome_border_to_edit_text" /> />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:text="@string/password"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/helepr_v1"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/custome_border_to_edit_text"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/repassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:text="@string/repassword"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/helepr_v1"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/repassword"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repassword_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/custome_border_to_edit_text"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue_main"
        android:padding="16dp"
        android:text="@string/create_account"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/helepr_v1"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_repassword" />

    <TextView
        android:id="@+id/have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="40dp"
        android:text="@string/haveAccount"
        android:textColor="@color/blue_main"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/btn_create_account"
        app:layout_constraintStart_toStartOf="@id/btn_create_account"
        app:layout_constraintTop_toBottomOf="@id/btn_create_account" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/helepr_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />
</androidx.constraintlayout.widget.ConstraintLayout>