<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.customer_main.tabs.account.EditInformationCustomerFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/account_profile_pic"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/profile_pic" />

    <ImageView
        android:id="@+id/pen_to_change_image"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/edit_profile_image"
        app:layout_constraintBottom_toBottomOf="@id/account_profile_pic"
        app:layout_constraintEnd_toEndOf="@id/account_profile_pic" />
    <!-- First Name -->
    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/first_name"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/account_profile_pic" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/first_name"
        app:layout_constraintTop_toBottomOf="@id/first_name">

        <EditText
            android:id="@+id/firstname_ed"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custome_border_to_edit_text"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Last Name -->
    <TextView
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lastname"
        android:layout_marginStart="15dp"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_firstname" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/lastname"
        app:layout_constraintTop_toBottomOf="@id/lastname">

        <EditText
            android:id="@+id/lastname_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custome_border_to_edit_text"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/phone_number"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_lastname" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/phonenumber"
        app:layout_constraintTop_toBottomOf="@id/phonenumber">

        <EditText
            android:id="@+id/phone_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custome_border_to_edit_text"
            android:padding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_changes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="15dp"
        android:text="@string/save_changes"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_phone" />


</androidx.constraintlayout.widget.ConstraintLayout>