<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.technicianinfo.TechnicianInfoActivity">

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_profileimg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="54dp"
        />
    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/phone_number"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phonenumber">

        <EditText
            android:id="@+id/phone_ed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/custome_border_to_edit_text" />
        />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/occupation"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_phone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_occupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/occupation">

        <EditText
            android:id="@+id/occupationEd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/custome_border_to_edit_text" />
        />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/work_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/work_experience"
        android:textColor="@color/blue_main"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_occupation" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlayout_work_experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/work_experience">

        <EditText
            android:id="@+id/work_experience_ed"
            android:layout_width="match_parent"
            android:lines="4"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/custome_border_to_edit_text" />
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_changes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputlayout_work_experience"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/save_changes"
        android:padding="15dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="20dp"
        app:cornerRadius="30dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>